[package]
name = "progress_server"
version = "0.1.0"
authors = ["Jonathan McElroy <jonathanpmcelroy@gmail.com>"]

[dependencies]
rocket = "*"
rocket_codegen = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
rust-ini = "*"
regex = "*"
url = "*"
docopt = "*"
nom = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[dependencies.hyper]
version = "*"
default-features = false
